# rsecnotes

./: .gitignore  .prettierrc  Cargo.toml  LICENSE  README.md  build.rs  package-lock.json  package.json  tsconfig.json
.github/workflows/: rust.yml
client/: 01_qrcode.js  02_lib.ts  03_i18n.tsx  04_pkg.ts  05_api.ts  favicon.afdesign  index.ts  index.tsx  package.json  tsconfig.json
public/: index.css  index.html
server/: Cargo.toml
server/src/: db.rs  main.rs
src/: db.rs  main.rs
