[package]
name = "rsecnotes"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
base64 = "0.22.1"
bytesize = { version = "2.1.0", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive"] }
rand = "0.9.2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

[profile.release]
panic = "abort"
